# SDPJ-System

./: .env.example  .gitignore  .importlinter  AAA-夜间监控.md  CLAUDE.md  LICENSE  README.md  __tmp_check2.py  __tmp_fix_jade.py  __tmp_reload.py  __tmp_test_load.py  _check_db.py  _debug_probe.py  _query_debug.py  _ruff.json  _ruff.txt  _run_ruff.py  _tmp_check.py  check_user.py  context-handoff.json  create_startup.ps1  create_structure.py  docker-compose.yml  fix_encoding.ps1  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.ps1  start.sh  test_result.py  多编码实现方案.txt
.claude/: settings.local.json
assets/fonts/: charset.txt
data/db/: sdpj.db
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: UtilsLib_Development_Report.md  初始化记录.md
openspec/: DEMEND.md
openspec/changes/add-config-availability-check/: design.md  proposal.md  tasks.md
openspec/changes/add-cross-platform-startup-scripts/: design.md  proposal.md  tasks.md
openspec/changes/add-detection-eta/: design.md  proposal.md  tasks.md
openspec/changes/align-dac-frontend-with-spec/: design.md  proposal.md  tasks.md
openspec/changes/fix-concurrency-bottlenecks/: design.md  proposal.md  tasks.md
openspec/changes/fix-dac-validation-gaps/: design.md  proposal.md  tasks.md
openspec/changes/fix-mypy-remaining/: design.md  proposal.md  tasks.md
openspec/changes/frontend-rate-limit-config/: design.md  proposal.md  tasks.md
openspec/changes/optimize-detection-algorithm-performance/: design.md  proposal.md  tasks.md
openspec/changes/optimize-startup-dataset-loading/: design.md  proposal.md  tasks.md
openspec/changes/rate-limit-from-adapter-config/: design.md  proposal.md  tasks.md
openspec/changes/refactor-cli-for-backend-changes/: design.md  proposal.md  tasks.md
openspec/changes/report-delete-sync-task-queue/: design.md  proposal.md  tasks.md
openspec/specs/: 1.spec.md  10.AGENTS-TEAM-ARCHITECTURE.md  2.design.md  3.tasks.md  4.模型依赖关系图.puml  5.项目技术选型.md  7.检测业务时序图.puml  8.项目目录结构设计.md  9.checklist.md  design.md  product-overview.md  project-description.md  spec.md  tasks.md  时序图评审规范.md  状态转移图.puml
openspec/specs/6.模块职责细化及技术细节/1.UI Layer/: CLI.md  WebUI.md
openspec/specs/6.模块职责细化及技术细节/2.Controller Layer/: StateScheduler.md
openspec/specs/6.模块职责细化及技术细节/3.Execution Logic Layer/: AccountManager.md  DACManager.md  EventLogger.md  PrivateConfigManager.md  ReportManager.md  SDPJDetector.md  SecureCommManager.md  TaskQueueManager.md
openspec/specs/6.模块职责细化及技术细节/4.Abstract Driver Layer/: DataProcessor.md  LLMInterface.md  LLMRegistry.md  LLMService.md  UserCenter.md
openspec/specs/6.模块职责细化及技术细节/5.Infrastructure Layer/: LLMAdapterLib.md  ResultDB.md  SampleDB.md  UserDB.md  UtilsLib.md
scripts/: backfill_attack_path.py  build_font_subset.py  register_models.py
sdpj/: __main__.py  bootstrap.py
sdpj/control/: __init__.py  state_machine.py  state_scheduler.py  state_scheduler_interface.py  system_states.py
sdpj/core/: __init__.py  account_manager.py  account_manager_interface.py  dac_manager.py  dac_manager_interface.py  event_logger.py  event_logger_interface.py  private_config_manager.py  private_config_manager_interface.py  report_manager.py  report_manager_interface.py  sdpj_detector.py  sdpj_detector_interface.py  secure_comm_manager.py  secure_comm_manager_interface.py  task_queue_manager.py  task_queue_manager_interface.py
sdpj/core/sdpj_detector/: __init__.py  dynamic_detector.py  prompt_builder.py  result_parser.py  static_detector.py
sdpj/drivers/: __init__.py  data_processor.py  data_processor_interface.py  llm_interface.py  llm_registry.py  llm_registry_interface.py  llm_service.py  llm_service_interface.py  llm_types.py  user_center.py  user_center_interface.py
sdpj/infrastructure/config/: __init__.py  constants.py  settings.py
sdpj/infrastructure/database/: .last_log_cleanup  __init__.py  base.py
sdpj/infrastructure/database/result_db/: __init__.py  interface.py  models.py  (+2 more)
sdpj/infrastructure/llm_adapters/: __init__.py  adapter_engine.py  anthropic_adapter.py  base.py  errors.py  llm_adapter_interface.py  llm_adapter_lib.py  loader.py  openai_adapter.py
sdpj/infrastructure/utils/: attack_path.py  cpu_executor.py  crypto.py  crypto_toolkit.py  encoding.py  eta_formatter.py  exceptions.py  file.py  multimodal.py  rate_limiter.py  serialization.py  utils_interface.py  utils_lib.py  validation.py
sdpj/ui/: __init__.py  cli.py  webui_backend.py
sdpj/ui/cli/: README.md  __init__.py  main.py  session.json  session.py
sdpj/ui/webui/: __init__.py
src/: .gitignore
tests/: .flake8  conftest.py
tests/e2e/: conftest.py  test_cli.py  test_report_features_api.py  test_webui_api.py
tests/fixtures/: mock_responses.py  sample_data.py
tests/integration/: healthcheck.py  test_api_endpoints.py  test_database.py  test_detection_flow.py  test_full_integration.py  test_iteration_count.py  test_multimodal_check_performance.py  test_multimodal_injection_flow.py  test_report_features.py  test_wave0_to_wave2.py  test_wave0_to_wave2_fixed.py  test_wave3_state_scheduler.py  test_wave4_complete.py  test_wave4_ui.py
tests/unit/: __init__.py  conftest.py
tests/unit/control/: test_state_scheduler.py  test_system_states.py
tests/unit/core/: TEST_REPORT_EventLogger.md  TEST_REPORT_SecureCommManager.md  TEST_REPORT_TaskQueueManager.md  test_account_manager.py  test_dac_manager.py  test_eta_calculation.py  test_event_logger.py  test_private_config_manager.py  test_report_manager.py  test_secure_comm_manager.py  test_task_queue_manager.py
tests/unit/drivers/: test_data_processor.py  test_llm_interface.py  test_llm_registry.py  test_llm_service.py  test_user_center.py
tests/毕设测试数据/: check_multimodal.py  generate_multimodal.py  query_config4.py  query_db.py
tests/毕设测试数据/数据集/: test-least.jsonl  test.jsonl
tests/毕设测试数据/私有配置/: GLM-4-Flash-250414+openai.json  GLM-4.7-Flash+openai.json  GLM-Z1-Flash+openai.json  deepseek-V4-flash+openai.json  deepseek-v4-pro+anthropic.json  deepseek-v4-pro+openai.json
(+225 files in other folders)
